# Part-decomposition-for-additive-manufacturing

./: .createCmakeConfigs.sh.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md~  buildDebug.sh  buildRelease.sh  createCmakeConfigs.sh  installDependencies.sh  licenses.txt  rebuildlibs.sh  runDecomposer.sh  setupBuildEnv.sh
.github/workflows/: flawfinder.yml
doxygen/: Doxyfile  index.html
doxygen/html/: SimpleLogger_8hpp.html  SimpleLogger_8hpp__dep__incl.map  SimpleLogger_8hpp__dep__incl.md5  SimpleLogger_8hpp__incl.map  SimpleLogger_8hpp__incl.md5  SimpleLogger_8hpp_source.html  annotated.html  array2Str-example.html  arrayMath_8hpp.html  arrayMath_8hpp__dep__incl.map  arrayMath_8hpp__dep__incl.md5  arrayMath_8hpp__incl.map  arrayMath_8hpp__incl.md5  arrayMath_8hpp_source.html  classCFileHelper-members.html  classCFileHelper.html  classCFileHelper__coll__graph.map  classCFileHelper__coll__graph.md5  classInputParser-members.html  classInputParser.html  classModClipClosed-members.html  classModClipClosed.html  classModClipClosed__coll__graph.map  classModClipClosed__coll__graph.md5  classModClipClosed__inherit__graph.map  classModClipClosed__inherit__graph.md5  classMyCallback-members.html  classMyCallback.html  classMyCallback__coll__graph.map  classMyCallback__coll__graph.md5  classMyClass-members.html  classMyClass.html  classMyClass__coll__graph.map  classMyClass__coll__graph.md5  classMyLogger-members.html  classMyLogger.html  classMyLogger__coll__graph.map  classMyLogger__coll__graph.md5  classPolyEdge-members.html  classPolyEdge.html  (+188 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+8 more)
doxygen/latex/: SimpleLogger_8hpp.tex  SimpleLogger_8hpp__dep__incl.md5  SimpleLogger_8hpp__incl.md5  annotated.tex  array2Str-example.tex  arrayMath_8hpp.tex  arrayMath_8hpp__dep__incl.md5  arrayMath_8hpp__incl.md5  classCFileHelper.tex  classCFileHelper__coll__graph.md5  classInputParser.tex  classModClipClosed.tex  classModClipClosed__coll__graph.md5  classModClipClosed__inherit__graph.md5  classMyCallback.tex  classMyCallback__inherit__graph.md5  classMyClass.tex  classMyClass__coll__graph.md5  classMyLogger.tex  classMyLogger__coll__graph.md5  classPolyEdge.tex  classSimpleLogger.tex  classSimpleLogger__coll__graph.md5  classpolyQualityMeasures_1_1MeshWithAttributes.tex  classpolyQualityMeasures_1_1MeshWithAttributes_1_1generalLog.tex  classpolyQualityMeasures_1_1MeshWithAttributes_1_1generalLog__coll__graph.md5  classpolyQualityMeasures_1_1MeshWithAttributes__coll__graph.md5  classvtkCCSEdgeLocator.tex  classvtkCCSEdgeLocatorNode.tex  classvtkCCSEdgeLocatorNode__coll__graph.md5  examples.tex  files.tex  hierarchy.tex  l3mfHelper_8hpp.tex  l3mfHelper_8hpp__dep__incl.md5  l3mfHelper_8hpp__incl.md5  lArgParsHelper_8hpp.tex  lArgParsHelper_8hpp__dep__incl.md5  lArgParsHelper_8hpp__incl.md5  lVhacdHelper_8cpp.tex  (+46 more)
inc/: SimpleLogger.hpp  arrayMath.hpp  l3mfHelper.hpp  lArgParsHelper.hpp  lFileHelper.hpp  lVhacdHelper.hpp  lVtkHelper.hpp  lVtkHelper.hpp~RFa85e7d4.TMP  licensesAsStr.hpp  mesh3mfWriter.hpp  meshWithAttributes.hpp  modifiedClipClosedSurface.hpp  oclHelper.h  polyEdgeSet.hpp  polyQualityMeasures.hpp  typesConstantsDefinition.hpp  workflows.hpp
licenses/: licenseVHACDAndCodeBasedUpon
release_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  decomposer.vcxproj  decomposer.vcxproj.filters  testPro.sln
release_build/decomposer.dir/Debug/: decomposer.exe.recipe
release_build/decomposer.dir/Debug/decomposer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  decomposer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
release_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
release_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
release_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: l3mfHelper.cpp  lVhacdHelper.cpp  lVtkHelper.cpp  main.cpp  modifiedClipClosedSurface.cpp  polyQualityMeasures.cpp  workflows.cpp
